fix a buffer overflow in cmdname handling Only abort if we fail to open an existing pidfile

--- a/debian/changelog
+++ b/debian/changelog
@@ -32,6 +32,10 @@ dpkg (1.7.0) unstable; urgency=low
   * dpkg-scanpackages now uses the most recent version if multiple versions
     of a package are found.
   * don't rename a file to itself in dpkg-source. Closes: Bug#75060
+  * Fix buffer overflow in cmdname handling in start-stop-daemon.
+    Closes: Bug#75103
+  * Don't abort if start-stop-daemon tries to read a non-existing pidfile.
+    Closes: Bug#75105
 
  -- Wichert Akkerman <wakkerma@debian.org>  UNRELEASED
 
