--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Thu Oct 19 00:59:40 CEST 2000 Wichert Akkerman <wakkerma@debian.org>
+
+  * utils/start-stop-daemon.c
+    + fix a buffer overflow in cmdname handling
+    + Only abort if we fail to open an existing pidfile
+
 Wed Oct 18 17:48:15 CEST 2000 Wichert Akkerman <wakkerma@debian.org>
 
   * scripts/dpkg-source.pl: patch from Colin Watson to not rename a
